# budmon

./: .gitattributes  .gitignore  CHANGELOG.md  README.de.md  README.md  pyproject.toml
budmon/: __init__.py  __main__.py  budmon.default.ini  cli.py  config.py  dashboard.py  data.py  i18n.py  interceptor.mjs  models.py  platform.py  setup.py  statusline.py  transcript.py  widgets.py
budmon/lang/: de.json  en.json
tests/: __init__.py  test_config.py  test_dashboard.py  test_i18n.py  test_integration.py  test_setup_statusline.py  test_statusline.py  test_transcript.py
