[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budmon"
version = "1.1.0"
description = "Real-time budget monitor dashboard for Claude Code token usage"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "weilhalt" },
]
keywords = ["claude", "budget", "monitor", "dashboard", "token", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/weilhalt/budmon"
Issues = "https://github.com/weilhalt/budmon/issues"

[project.scripts]
budmon = "budmon.cli:main"

[project.gui-scripts]
budmon-gui = "budmon.cli:main"

[tool.setuptools.packages.find]
include = ["budmon*"]

[tool.setuptools.package-data]
budmon = ["lang/*.json", "interceptor.mjs", "budmon.default.ini", "icons/*"]
